# cpp-hpc-voxel-engine

./: .clang-format  .clang-format-ignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  README.md  lsan.supp
.github/workflows/: build_and_test.yml
assets/shaders/: fragment.glsl  fragment_Chunk.glsl  fragment_SimpleDebug.glsl  vertex.glsl  vertex_Chunk.glsl  vertex_SimpleDebug.glsl
docs/: index.html
docs/api/: _a_a_b_b_8h.html  _a_a_b_b_8h__dep__incl.md5  _a_a_b_b_8h__incl.md5  _a_a_b_b_8h_source.html  _application_8cpp.html  _application_8cpp__incl.md5  _application_8h.html  _application_8h__dep__incl.md5  _application_8h__incl.md5  _application_8h_source.html  _buffer_8h.html  _buffer_8h.js  _buffer_8h__dep__incl.md5  _buffer_8h__incl.md5  _buffer_8h_source.html  _chunk_8cpp.html  _chunk_8cpp__incl.md5  _chunk_8h.html  _chunk_8h.js  _chunk_8h__dep__incl.md5  _chunk_8h__incl.md5  _chunk_8h_source.html  _chunk_manager_8cpp.html  _chunk_manager_8cpp__incl.md5  _chunk_manager_8h.html  _chunk_manager_8h.js  _chunk_manager_8h__dep__incl.md5  _chunk_manager_8h__incl.md5  _chunk_manager_8h_source.html  _frustum_8cpp.html  _frustum_8cpp.js  _frustum_8cpp__incl.md5  _frustum_8h.html  _frustum_8h.js  _frustum_8h__dep__incl.md5  _frustum_8h__incl.md5  _frustum_8h_source.html  _index_buffer_8h.html  _index_buffer_8h.js  _index_buffer_8h__dep__incl.md5  (+491 more)
docs/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+89 more)
src/: PhysicsSystem.h  main.cpp
src/app/: Application.cpp  Application.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h
src/core/: AABB.h  MathUtils.h  Matrix.h  Ray.h  ThreadPool.h  ThreadSafeQueue.h  Voxel.h  camera.h
src/physics/: AABB.h  PhysicsSystem.cpp  PhysicsSystem.h  ThermalSystem.cpp  ThermalSystem.h
src/renderer/: Buffer.h  DebugRenderer.h  Frustrum.cpp  Frustrum.h  Frustum.cpp  Frustum.h  IndexBuffer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Shader.h  Texture.h  ThermalVolume.h  VertexArray.h  WorldRenderer.cpp  WorldRenderer.h
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Player.cpp  Player.h  RegionManager.cpp  RegionManager.h
tests/: test_chunk.cpp  test_main.cpp  test_physics.cpp
